# substrate

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  AGENT_ORCHESTRATION_GAP_MATRIX.md  AI_AGENT_START_HERE.md  ARCHITECTURE.md  CHANGELOG.md  CI_CHECKPOINTING_ADHOC_NOTES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DOCS_AUDIT.md  Dockerfile  FSE_PRE_PLANNING_DEPENDENCY_GRAPH.md  FSE_PRE_PLANNING_STAGE_OUTPUT_CONTRACT.md  HOST_ORCHESTRATOR_INTENDED_BEHAVIOR_TRUTH.md  LICENSE  LLM_AI_CAPABILITY_ENABLEMENT_PLANNING_ORDER.md  Makefile  ORCH_PLAN.md  PHASE_4_CONTINUATION.md  PHASE_4_SESSION4_CONTINUATION.md  PLAN.md  PWS_FULL_PLANNING_ORCHESTRATION_V1.md  README.md  REEDLINE_MIGRATION_PLAN.md  REEDLINE_PROMPT_REGRESSION.md  REEDLINE_REMOVAL_PLAN.md  SEAM_2_BLOCKER_AUDIT.md  SEAM_2_STEP_2_EXECUTION_PLAN.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.MD  UAA_PROMPTLESS_RESUME_FORK_SYNTHESIS.md  WORKSTREAM_TRIAGE_AND_LIFT_DECISIONS.md  WORK_LIFT_V1_SPEC_DRIFT.md  build.rs  ci-improvements.md  (+46 more)
crates/agent-api-client/: Cargo.toml
crates/agent-api-client/src/: lib.rs  retry.rs  transport.rs
crates/agent-drift-analyzer/: Cargo.toml
crates/agent-drift-analyzer/src/: cli.rs  input.rs  lib.rs  main.rs
crates/agent-drift-analyzer/tests/: checkpoints.rs  context_assembly.rs  dead_end_thrash.rs  end_to_end.rs  export_bundle.rs  ignoring_repo_truth.rs  input_contract.rs  task_frame.rs  wrong_plan_branch.rs
crates/agent-drift-sentinel/: Cargo.toml
crates/agent-drift-sentinel/src/: adjudication.rs  cli.rs  input.rs  lib.rs  live_input.rs  live_runtime.rs  main.rs  operator_sink.rs  operator_surface.rs  real_session_live.rs  scheduler.rs
crates/agent-drift-sentinel/tests/: adjudication.rs  adjudication_fallback.rs  live_checkpoint_compatibility.rs  live_end_to_end.rs  live_input.rs  live_input_adapter.rs  live_runtime.rs  operator_sink.rs  operator_surface.rs  real_session_live.rs  replay_input.rs  scheduler.rs  warning_policy.rs
crates/agent-session-compactor/: Cargo.toml
crates/agent-session-compactor/src/: cli.rs  discovery.rs  lib.rs  main.rs
crates/agent-session-compactor/tests/: canonicalization.rs  dedupe.rs  discovery.rs  end_to_end.rs  export_bundle.rs  normalization.rs  rollout_ingest.rs
crates/broker/: Cargo.toml
crates/broker/src/: api.rs  approval.rs  broker.rs  effective_policy.rs  handle.rs  lib.rs  mode.rs  policy.rs  policy_loader.rs  profile.rs  tests.rs  watcher.rs
crates/common/: Cargo.toml
crates/common/src/: agent_events.rs  agent_identity.rs  fs_diff.rs  gateway_auth_bundle.rs  identity.rs  lib.rs  manager_manifest.rs  paths.rs  seccomp.rs  settings.rs  world_deps_manifest.rs  world_exec_guard.rs
crates/common/tests/: agent_hub_event_envelope_schema.rs
crates/forwarder/: Cargo.toml
crates/forwarder/src/: bridge.rs  config.rs  logging.rs  main.rs  pipe.rs  tcp.rs  windows.rs  wsl.rs
crates/gateway/: Cargo.toml  README.md  statusline.sh
crates/gateway/archived/: OAUTH_IMPLEMENTATION_COMPLETE.md  oauth_summary.md
crates/gateway/config/: claude-max-oauth.example.toml  default.example.toml  models.example.toml
crates/gateway/docs/: IMPORTANT_SUBSTRATE_ALIGNMENT.md  OAUTH_SETUP.md  OAUTH_TESTING.md  azure-kimi-claude-code-quickstart.md  gemini-integration.md  openai-compatibility.md
crates/gateway/examples/: oauth_login.rs
crates/gateway/src/: adapter_runtime.rs  core.rs  launch.rs  lib.rs  main.rs  pid.rs  structured_events.rs
crates/gateway/tests/: azure_foundry_transport.rs  openai_chat_completions_conformance.rs  openai_conformance_harness_smoke.rs  openai_responses_conformance.rs  openai_shared_parity.rs  prompt_caching_comprehensive_test.rs  prompt_caching_test.rs
crates/host-proxy/: Cargo.toml
crates/host-proxy/src/: auth.rs  config.rs  lib.rs  main.rs  middleware.rs  rate_limit.rs  runtime.rs  transport.rs
crates/host-proxy/tests/: config_runtime.rs  entrypoint.rs
crates/hrm/: Cargo.toml  README.md
crates/hrm/src/: lib.rs  regression.rs  replay.rs  state.rs
crates/hrm/tests/: integration.rs
crates/lift/: Cargo.toml  README.md  TODOS.md  lift_seam0_spec.md  lift_seam1_spec_reviewed.md  lift_seam2_spec_reviewed.md  lift_seam3_spec_reviewed.md
crates/lift/examples/: README.md
crates/lift/fixtures/: README.md
crates/lift/profiles/: README.md
crates/lift/recipes/: README.md
crates/lift/rules/: README.md
crates/lift/schemas/: README.md
crates/lift/src/: error.rs  lib.rs  runtime_bootstrap_tests.rs
crates/lift/tests/: cli_help.rs  compile_matrix.rs  kernel_identity_schema.rs  lang_cache.rs  lang_capabilities.rs  lang_consumer.rs  lang_parse.rs  lang_registry.rs  lang_schema.rs  pack_bundle.rs  pack_compile.rs  pack_fingerprints.rs  pack_schema.rs  pack_topology.rs  repo_diff.rs  repo_fingerprints.rs  repo_git_snapshot.rs  repo_ignore.rs  repo_purity.rs  repo_root.rs  repo_schema.rs  repo_snapshot.rs  repo_symlinks.rs  runtime_bootstrap.rs
crates/shell/: Cargo.toml  build.rs  test_needs_pty
crates/shell/src/: agent_events.rs  async_repl.rs  editor.rs  host_decider.rs  lib.rs  lock.rs  main.rs  manager_init.rs  platform_world.rs  pty.rs  pty_exec.rs  settings.rs  shim_deploy.rs
crates/shell/tests/: agent_hub_trace_persistence.rs  agent_public_control_surface_v1.rs  agent_successor_contract_ahcsitc0.rs  agents_validate.rs  authoritative_inbox_dev_support.rs  cmd_denied_host_only.rs  command_mode_world_consistency_v1.rs  common.rs  config_init.rs  config_set.rs  config_show.rs  config_world_deps_phase_b.rs  doctor_scopes_ds0.rs  ev0_override_split.rs  fail_closed_semantics.rs  installer_env_wcu4.rs  integration.rs  (+64 more)
crates/shim/: Cargo.toml  build.rs
crates/substrate-graph/: Cargo.toml
crates/supervisor/: Cargo.toml
crates/telemetry-lib/: Cargo.toml  Dockerfile  Dockerfile.linux  Dockerfile.standalone
crates/trace/: Cargo.toml
crates/transport-api-core/: Cargo.toml
crates/world/: Cargo.toml
crates/world-agent/: Cargo.toml
crates/world-api/: Cargo.toml
crates/world-backend-factory/: Cargo.toml
crates/world-mac-lima/: Cargo.toml
crates/world-windows-wsl/: Cargo.toml
(+5587 files in other folders)
