[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/shim", 
    "crates/shell",
]

[workspace.dependencies]
anyhow = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.4"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v7"] }
atty = "0.2"
sha2 = "0.10"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
reedline = { path = "third_party/reedline" }