[package]
name = "substrate"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Secure execution layer for AI agent development workflows with comprehensive tracing and isolation"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
keywords = ["ai", "agent", "security", "tracing", "shell"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "substrate"
path = "src/main.rs"

[[bin]]
name = "substrate-shim"
path = "src/shim_main.rs"

[dependencies]
anyhow = { workspace = true }
env_logger = "0.11"
substrate-shell = { version = "0.2.0", path = "crates/shell" }
substrate-shim = { version = "0.2.0", path = "crates/shim" }

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/shim", 
    "crates/shell",
    # New Phase 4 crates
    "crates/world-api",
    "crates/world",
    "crates/world-mac-lima",
    "crates/world-backend-factory",
    "crates/world-agent",
    # Agent API (shared contract + proxy)
    "crates/agent-api-types",
    "crates/agent-api-core",
    "crates/agent-api-client",
    "crates/host-proxy",
    "crates/broker", "crates/trace",
    # "crates/trace",   # TODO: Implement after broker
    "crates/telemetry-lib",
    "crates/replay", "crates/substrate-graph", "crates/forwarder", "crates/world-windows-wsl",
    "tools/version-bump",
]

[workspace.dependencies]
anyhow = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.4"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v7"] }
atty = "0.2"
sha2 = "0.10"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
reedline = { path = "third_party/reedline" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
