[package]
name = "substrate"
version = "0.2.8"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Secure execution layer for AI agent development workflows with comprehensive tracing and isolation"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
keywords = ["ai", "agent", "security", "tracing", "shell"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "substrate"
path = "src/main.rs"

[[bin]]
name = "substrate-shim"
path = "src/shim_main.rs"
doc = false

[dependencies]
anyhow = { workspace = true }
env_logger = "0.11"
substrate-shell = { version = "0.2.8", path = "crates/shell", package = "shell" }
substrate-shim = { version = "0.2.8", path = "crates/shim" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.dist]
dist = true
display = false

[package.metadata.dist.binaries]
"*" = ["substrate", "substrate-shim"]

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/shim", 
    "crates/shell",
    "crates/gateway",
    "crates/lift",
    # New Phase 4 crates
    "crates/world-api",
    "crates/world",
    "crates/world-mac-lima",
    "crates/world-backend-factory",
    "crates/world-service",
    # Agent API (shared contract + proxy)
    "crates/transport-api-types",
    "crates/transport-api-core",
    "crates/transport-api-client",
    "crates/host-proxy",
    "crates/broker", "crates/trace",
    # "crates/trace",   # TODO: Implement after broker
    "crates/telemetry-lib",
    "crates/replay", "crates/forwarder", "crates/world-windows-wsl",
    "tools/version-bump",
]
exclude = ["crates/substrate-graph"]

[workspace.dependencies]
anyhow = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.4"
once_cell = "1.19"
uuid = { version = "1.10", features = ["v7"] }
atty = "0.2"
sha2 = "0.10"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
unified-agent-api = { path = "../unified-agent-api/crates/agent_api" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
