[package]
name = "agent-api-client"
version = "0.1.1"
edition = "2021"
authors = ["Atomize"]
description = "Client for forwarding Agent API requests to world-agent"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
hyperlocal = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dirs = "5"
agent-api-types = { path = "../agent-api-types" }

[dev-dependencies]
tempfile = "3"