[package]
name = "agent-drift-analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Deterministic drift analyzer over compactor bundles"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
publish = false

[lib]
name = "agent_drift_analyzer"
path = "src/lib.rs"

[[bin]]
name = "agent-drift-analyzer"
path = "src/main.rs"
doc = false

[dependencies]
agent-session-compactor = { path = "../agent-session-compactor", package = "agent-session-compactor" }
anyhow = { workspace = true }
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "warn"
print_stdout = "allow"
print_stderr = "allow"
todo = "warn"
unwrap_used = "warn"
