[package]
name = "substrate-common"
version = "0.1.1"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Shared utilities and logging schema for the Substrate command tracing ecosystem"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
keywords = ["tracing", "logging", "utilities"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"