[package]
name = "substrate-common"
version = "0.2.3"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Shared utilities and logging schema for the Substrate command tracing ecosystem"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
keywords = ["tracing", "logging", "utilities"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
