[package]
name = "substrate-forwarder"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"

[dependencies]
anyhow = "1"
atty = { workspace = true }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "process", "io-util", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uds_windows = "1"
uuid = { workspace = true }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem"
] }

[package.metadata.dist]
dist = true
