[package]
name = "substrate-hrm"
version = "0.1.0"
edition = "2021"
authors = ["Atomize HQ"]
description = "Hot Reload Module for deterministic trace replay and regression testing"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.5", features = ["v7", "serde"] }
similar = "2.3"
sha2 = "0.10"
tempfile = "3.8"
hostname = "0.3"
regex = "1.10"

# Internal dependencies
substrate-common = { path = "../common" }
substrate-trace = { path = "../trace" }
substrate-broker = { path = "../broker" }
world = { path = "../world" }

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "1.4"