[package]
name = "substrate-lift"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Deterministic lift scoring engine and CLI scaffold"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
readme = "README.md"
publish = false
keywords = ["lift", "cli", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "substrate_lift"
path = "src/lib.rs"

[[bin]]
name = "lift"
path = "src/bin/lift.rs"
required-features = ["cli"]
doc = false

[features]
default = ["cli"]
cli = ["dep:clap"]
compat-v1 = []
config-lang = []
rust-lang = []
python-lang = []
javascript-lang = []
typescript-lang = []
substrate-profile = []

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "warn"
print_stdout = "allow"
print_stderr = "allow"
todo = "warn"
unwrap_used = "warn"
