[package]
name = "substrate"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
authors = ["Atomize"]
description = "Secure execution layer for AI agent development workflows with comprehensive tracing and isolation"
license = "MIT"
repository = "https://github.com/atomize-codes/substrate"
keywords = ["ai", "agent", "security", "tracing", "shell"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v7"] }
atty = "0.2"
# rustyline = "14.0"  # Replaced with reedline
reedline = { version = "0.41", features = [] }
nu-ansi-term = "0.50"
shellexpand = "3.1"
shell-words = "1.1"
gethostname = "0.4"
which = "6"
ctrlc = "3.4"
substrate-common = { version = "0.1.0", path = "../common" }
# Dependencies for bundled binaries
sha2 = "0.10"
# PTY support dependencies
portable-pty = "0.8"
signal-hook = "0.3"
lazy_static = "1.4"
env_logger = "0.11"
log = "0.4"
dirs = "5"
fs2 = "0.4"        # For cross-platform file locking
tempfile = "3.8"   # For atomic deployment
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "time", "poll"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
serial_test = "3.0"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []