[package]
name = "substrate-shell"
version = "0.1.1"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Secure execution layer for AI agent development workflows with comprehensive tracing and isolation"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
keywords = ["ai", "agent", "security", "tracing", "shell"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v7"] }
atty = "0.2"
# rustyline = "14.0"  # Replaced with reedline
reedline = { version = "0.41", features = [] }
nu-ansi-term = "0.50"
shellexpand = "3.1"
shell-words = "1.1"
gethostname = "0.4"
which = "6"
ctrlc = "3.4"
substrate-common = { version = "0.1.1", path = "../common" }
substrate-broker = { version = "0.1.0", path = "../broker" }
world = { version = "0.1.1", path = "../world" }
world-api = { version = "0.1.0", path = "../world-api" }
# Dependencies for bundled binaries
sha2 = "0.10"
# PTY support dependencies
portable-pty = "0.8"
signal-hook = "0.3"
lazy_static = "1.4"
env_logger = "0.11"
log = "0.4"
dirs = "5"
fs2 = "0.4"        # For cross-platform file locking
tempfile = "3.8"   # For atomic deployment
serde = { version = "1.0", features = ["derive"] }
substrate-trace = { version = "0.1.0", path = "../trace" }
substrate-replay = { version = "0.1.0", path = "../replay" }
substrate-graph = { version = "0.1.0", path = "../substrate-graph" }
tokio = { version = "1.32", features = ["rt", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
hyperlocal = "0.8"
futures = "0.3"
base64 = "0.22"
url = "2"
agent-api-client = { version = "0.1.0", path = "../agent-api-client" }
agent-api-types = { version = "0.1.0", path = "../agent-api-types" }

[target.'cfg(target_os = "macos")'.dependencies]
world-mac-lima = { version = "0.1.0", path = "../world-mac-lima" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "time", "poll"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
serial_test = "3.0"
proptest = "1.4"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []
