[package]
name = "substrate-shim"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Substrate Team"]
description = "Command execution shim for tracing and observability"
license = "MIT"
repository = "https://github.com/your-org/substrate"
keywords = ["tracing", "observability", "command", "shim"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "shim"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gethostname = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
atty = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3.0"
which = "6"
assert_cmd = "2.0"