[package]
name = "substrate-shim"
version = "0.2.3"
edition = "2021"
rust-version = "1.89"
authors = ["Atomize"]
description = "Command execution shim for tracing and observability"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"
readme = "../../README.md"
keywords = ["tracing", "observability", "command", "shim"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bench]]
name = "performance"
harness = false

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gethostname = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
atty = { workspace = true }
sha2 = { workspace = true }
substrate-broker = { version = "0.1.0", path = "../broker" }
substrate-trace = { version = "0.2.3", path = "../trace" }
world = { version = "0.1.1", path = "../world" }
world-api = { version = "0.1.0", path = "../world-api" }
world-backend-factory = { path = "../world-backend-factory" }
substrate-common = { version = "0.2.3", path = "../common" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3.0"
which = "6"
assert_cmd = "2.0"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "substrate_shim_test_bin"
path = "src/bin/substrate_shim_test_bin.rs"
