[package]
name = "substrate-supervisor"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Environment supervisor for substrate command tracing"
license = "MIT"

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }