[package]
name = "substrate-trace"
version = "0.2.0-beta.1"
edition = "2021"

[dependencies]
substrate-common = { version = "0.2.0-beta.1", path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }
anyhow = "1.0"
tracing = "0.1"
sha2 = "0.10"
dirs = "6.0"
once_cell = "1.19"
parking_lot = "0.12"

tempfile = "3.8"

[features]
default = []

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.35", features = ["full"] }
