[package]
name = "transport-api-core"
version = "0.2.8"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
transport-api-types = { version = "0.2.8", path = "../transport-api-types" }
thiserror = "1"
async-trait = "0.1"
