[package]
name = "world-agent"
version = "0.2.4"
edition = "2021"
authors = ["Atomize"]
description = "Agent service running inside worlds/VMs providing execution API"
license = "MIT"
repository = "https://github.com/atomize-hq/substrate"

[[bin]]
name = "world-agent"
path = "src/main.rs"

[package.metadata.dist]
dist = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
display = false

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { workspace = true }
thiserror = "1"
axum = { version = "0.6", features = ["ws"] }
futures-util = "0.3"
hyper = "0.14"
tokio-tungstenite = "0.21"
portable-pty = "0.8"
base64 = "0.22"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
once_cell = "1"
libc = "0.2"
substrate-common = { path = "../common" }
agent-api-core = { path = "../agent-api-core" }
agent-api-types = { path = "../agent-api-types" }
world-api = { path = "../world-api" }
substrate-broker = { path = "../broker" }

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"

# Local dependencies moved into main [dependencies] for cross-platform builds

# Platform-specific world backends
[target.'cfg(target_os = "linux")'.dependencies]
world = { path = "../world" }

[dev-dependencies]
tempfile = "3"
