[package]
name = "world-mac-lima"
version = "0.1.1"
edition = "2021"
authors = ["Atomize"]
description = "macOS world backend using Lima VM with Linux isolation inside"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
uuid = { workspace = true }
thiserror = "1"
which = "4"
world-api = { path = "../world-api" }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
